--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.clearfix::after{
+  content: "";
+  display: block;
+  clear: both;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.wrapper {
+  padding: 0 0 0 200px;
 }
-
-.App-link {
-  color: #61dafb;
+.main {
+  float: left;
+  width: 100%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left {
+  float: left;
+  width: 200px;
+  margin-left: -100%;
+  position: relative;
+  left: -200px;
 }
