--- a/src/App.css
+++ b/src/App.css
@@ -8,21 +8,32 @@
   clear: both;
 
 }
-.wrapper {
-  padding: 0 0 0 200px;
-}
 .main {
   float: left;
-  width: 100%;
+  width: 75%;
+  margin-top: 1%;
 }
 .left {
-  float: left;
-  width: 200px;
-  margin-left: -100%;
-  position: relative;
-  left: -200px;
+  margin-left: 3%;
+  margin-top: 1%;
 }
 
 .left-content {
   margin: 0 30px;
+}
+
+.App-header, .App-footer {
+  background-color: #282c34;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 16;
+  color: white;
+  padding: 5px 0;
+}
+
+.main-container {
+  padding: 5px;
 }
