--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
   margin: 0 5px 0 15px;
   overflow: hidden;
 }
+
+.display-btn {
+  margin-top: 15px;
+  justify-content: center;
+}
+
+.display-btn button{
+  margin: 5px auto 5px auto;
+}
